--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start:dev": "webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +15,13 @@
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.19.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@types/d3": "^6.3.0",
+    "@types/topojson": "^3.2.2",
+    "d3": "^6.5.0",
     "jquery": "^3.5.1"
   }
 }
