--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jquery": "^3.5.5",
+    "json-loader": "^0.5.7",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.19.0",
