--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jquery": "^3.5.5",
     "json-loader": "^0.5.7",
+    "shp": "0.0.1",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.19.0",
